--- a/nftapis/package.json
+++ b/nftapis/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "@supabase/supabase-js": "^2.47.16",
-    "axios": "^1.5.1",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
